[package]
name = "grabber"
version = "0.1.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["unstable-locales"] }
clap = { version = "3.0.0-beta.2", features = ["yaml", "wrap_help", "suggestions", "color"] }
octocrab = "0.8.12"
serde = "1.0.125"
serde_yaml = "0.8.17"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }